# Flam-p

./: README.md
Flam/: settings.gradle.kts
Flam/app/: build.gradle.kts
Flam/app/src/main/: AndroidManifest.xml
Flam/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Flam/app/src/main/java/com/example/flam/: CameraHelper.kt  GLRenderer.kt  MainActivity.kt
Flam/gradle/wrapper/: gradle-wrapper.properties
Flam/web/: app.js  app.ts  index.html
